Add TLS 1.3 ciphersuite setting
Also fix NPE handling in the CA configuration after revert.
Clarify ciphersuite errors since it doesn't mean it won't work (verified
with testssl).
Verify with only TLS 1.2, TLS 1.3, TLS 1.2 + TLS 1.3.