@@ -154,6 +154,8 @@ public class OpenSSLContext implements org.apache.tomcat.util.net.SSLContext {
     private final SSLHostConfig sslHostConfig;
     private final SSLHostConfigCertificate certificate;
     private final boolean alpn;
+    private final int minTlsVersion;
+    private final int maxTlsVersion;
 
     private OpenSSLSessionContext sessionContext;
     private String enabledProtocol;
@@ -274,6 +276,7 @@ public class OpenSSLContext implements org.apache.tomcat.util.net.SSLContext {
             } else if ((protocol & SSL_PROTOCOL_SSLV3) > 0) {
                 prot = SSL3_VERSION();
             }
+            maxTlsVersion = prot;
             // # define SSL_CTX_set_max_proto_version(sslCtx, version) \
             //          SSL_CTX_ctrl(sslCtx, SSL_CTRL_SET_MAX_PROTO_VERSION, version, NULL)
             SSL_CTX_ctrl(sslCtx, SSL_CTRL_SET_MAX_PROTO_VERSION(), prot, MemoryAddress.NULL);
@@ -289,6 +292,7 @@ public class OpenSSLContext implements org.apache.tomcat.util.net.SSLContext {
             if (prot == TLS1_VERSION() && (protocol & SSL_PROTOCOL_SSLV3) > 0) {
                 prot = SSL3_VERSION();
             }
+            minTlsVersion = prot;
             //# define SSL_CTX_set_min_proto_version(sslCtx, version) \
             //         SSL_CTX_ctrl(sslCtx, SSL_CTRL_SET_MIN_PROTO_VERSION, version, NULL)
             SSL_CTX_ctrl(sslCtx, SSL_CTRL_SET_MIN_PROTO_VERSION(), prot, MemoryAddress.NULL);
@@ -559,9 +563,17 @@ public class OpenSSLContext implements org.apache.tomcat.util.net.SSLContext {
             }
 
             // List the ciphers that the client is permitted to negotiate
-            if (SSL_CTX_set_cipher_list(state.sslCtx,
-                    SegmentAllocator.newNativeArena(state.contextMemorySession).allocateUtf8String(sslHostConfig.getCiphers())) <= 0) {
-                log.warn(sm.getString("engine.failedCipherSuite", sslHostConfig.getCiphers()));
+            if (minTlsVersion <= TLS1_2_VERSION()) {
+                if (SSL_CTX_set_cipher_list(state.sslCtx,
+                        SegmentAllocator.newNativeArena(state.contextMemorySession).allocateUtf8String(sslHostConfig.getCiphers())) <= 0) {
+                    log.warn(sm.getString("engine.failedCipherList", sslHostConfig.getCiphers()));
+                }
+            }
+            if (maxTlsVersion >= TLS1_3_VERSION()) {
+                if (SSL_CTX_set_ciphersuites(state.sslCtx,
+                        SegmentAllocator.newNativeArena(state.contextMemorySession).allocateUtf8String(sslHostConfig.getCiphers())) <= 0) {
+                    log.warn(sm.getString("engine.failedCipherSuite", sslHostConfig.getCiphers()));
+                }
             }
 
             if (certificate.getCertificateFile() == null) {
@@ -637,19 +649,21 @@ public class OpenSSLContext implements org.apache.tomcat.util.net.SSLContext {
                             ? allocator.allocateUtf8String(SSLHostConfig.adjustRelativePath(sslHostConfig.getCaCertificateFile())) : null;
                     MemorySegment caCertificatePathNative = sslHostConfig.getCaCertificatePath() != null
                             ? allocator.allocateUtf8String(SSLHostConfig.adjustRelativePath(sslHostConfig.getCaCertificatePath())) : null;
-                    if (SSL_CTX_load_verify_locations(state.sslCtx,
-                            caCertificateFileNative == null ? MemoryAddress.NULL : caCertificateFileNative,
-                            caCertificatePathNative == null ? MemoryAddress.NULL : caCertificatePathNative) <= 0) {
+                    if ((sslHostConfig.getCaCertificateFile() != null || sslHostConfig.getCaCertificatePath() != null) 
+                            && SSL_CTX_load_verify_locations(state.sslCtx,
+                                    caCertificateFileNative == null ? MemoryAddress.NULL : caCertificateFileNative,
+                                    caCertificatePathNative == null ? MemoryAddress.NULL : caCertificatePathNative) <= 0) {
                         logLastError(allocator, "openssl.errorConfiguringLocations");
                     } else {
                         var caCerts = SSL_CTX_get_client_CA_list(state.sslCtx);
                         if (MemoryAddress.NULL.equals(caCerts)) {
-                            caCerts = SSL_load_client_CA_file(caCertificateFileNative);
+                            caCerts = SSL_load_client_CA_file(caCertificateFileNative == null ? MemoryAddress.NULL : caCertificateFileNative);
                             if (!MemoryAddress.NULL.equals(caCerts)) {
                                 SSL_CTX_set_client_CA_list(state.sslCtx, caCerts);
                             }
                         } else {
-                            if (SSL_add_file_cert_subjects_to_stack(caCerts, caCertificateFileNative) <= 0) {
+                            if (SSL_add_file_cert_subjects_to_stack(caCerts,
+                                    caCertificateFileNative == null ? MemoryAddress.NULL : caCertificateFileNative) <= 0) {
                                 caCerts = MemoryAddress.NULL;
                             }
                         }
